# sink

./: Cargo.toml  README.md
.github/workflows/: build.yml  check-code-quality.yml  release.yml
docs/: configuration.md  dev_setup.md  index.md  plugins.md  sink_example.toml  usage.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/github/: mod.rs
